<resources>
    <string name="app_name">Share Notes</string>

    <string name="SignUpHint">"Sign Up Success!"</string>
    <string name="SignUp">"Sign Up"</string>
    <string name="SignIn">"Sign In"</string>
    <string name="Quit">Exit</string>
    <string name="Hint_user">Input Name</string>
    <string name="Hint_password">Input Password</string>
    <string name="Hint_password2">Confirm Password</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Title</string>
    <string name="User">User</string>
    <string name="Love">Love</string>
    <string name="LastEditDateTime">Last Edit</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="PasswordConfirm">Confirm Password</string>
    <string name="NotComplete">Complete Content Please</string>
    <string name="SignUp_Error_Input">Format Error</string>
    <string name="PasswordDiffrent">Two Password Different</string>
    <string name="title_activity_sign_up_success">signUpSuccess</string>
    <string name="SignInForgetPassword">Forget Password</string>
    <string name="SignInToSignUp">Sign Up Now</string>
    <string name="Hint_email">Input Email</string>
    <string name="profession">Profession</string>
    <string name="profession_hint">Select Profession...</string>
    <string name="Profession_Edu">Education</string>
    <string name="Profession_IT">IT</string>
    <string name="Profession_Business">Business</string>
    <string name="Profession_Art">Art</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="saved_article">saved article</string>

    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="Exit">EXIT</string>
    <string name="Return">RETURN</string>

    <string name="search">SEARCH</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign__in">Sign In</string>
    <string name="title_activity_activity_test">activity_test</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_my_notes_list">MyNotesList</string>
    <string name="title_activity_load">load</string>

    <string name="colon">:</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit">edit</string>
</resources>
