<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.study.neutree.android_study"
    android:orientation="vertical"
    android:background="@drawable/pic_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            style="@style/Input_"
            android:id="@+id/SignUp_userName"
            android:hint="@string/Hint_user"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Input_"
            android:id="@+id/SignUp_password"
            android:hint="@string/Hint_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/Input_"
            android:id="@+id/SignUp_password2"
            android:hint="@string/Hint_password2" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            style="@style/Input_"
            android:id="@+id/SignUp_Email"
            android:hint="@string/Hint_email"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profession"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"
                android:id="@+id/textView"
                android:layout_row="0"
                android:layout_column="0" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/SignUp_spinner"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:layout_column="1" />


        </GridLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:id="@+id/SignUP_Button"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:id="@+id/SignUp_To_SignIn"
        android:background="@drawable/button_bg"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:clickable="false" />
</LinearLayout>
