<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.study.neutree.android_study.sign_In"
    android:background="@drawable/pic_bg"
    android:weightSum="1">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:weightSum="5"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.study.neutree.components.CircleImageView
            android:id="@+id/signIn_HeadPicture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/head_pic"
            app:civ_border_width="0dp"
            app:civ_border_color="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/signIn_UserName"
            android:layout_margin="10dp"
            android:hint="@string/Hint_user"
            style="@style/Input_" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/signIn_UserPassword"
            android:layout_margin="1dp"
            style="@style/Input_"
            android:hint="@string/Hint_password"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/rememberPassword"
            android:id="@+id/signIn_rememberPassword"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignIn"
            android:background="@drawable/button_bg"
            android:id="@+id/button_signUp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:gravity="center"

            android:layout_gravity="center_horizontal"
            android:singleLine="false" />




    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/SignInForgetPassword"
        android:textColor="@android:color/holo_blue_bright"
        android:id="@+id/SignIn_ForgetPassword"
        android:paddingTop="15dp"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/SignInToSignUp"
        android:textColor="@android:color/holo_blue_bright"
        android:id="@+id/SignIn_SignUp"
        android:paddingTop="15dp"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
